--- a/assets/css/landing-page.css
+++ b/assets/css/landing-page.css
@@ -179,3 +179,10 @@ footer {
     color: #707070;
     font-size: 16px;
 }
+
+
+@media screen and (max-width: 991px) {
+    .user a.nav-link {
+        color: #2E266F;
+    }
+}
