--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -43,6 +43,35 @@ header {
 #list .nav a{
     color: #000 !important;
 }
+
+.recipesContainer {
+    position: relative;
+    width: 370px; 
+    height: 250px; 
+    border-radius: 20px;
+    overflow: hidden;
+    margin-bottom: 20px;
+}
+
+.recipes {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    object-fit: cover;
+    color: white;
+}
+
+.foodName {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    color: white;
+    padding: 24px;
+    font-size: 28px;
+    max-width: 108px;
+}
+
+
 footer {
     background-color: #efc81a;
     height: 100vh;  
